--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && lite-server",
-    "build": "tsc",
-    "watch": "tsc --watch"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.3",
     "lite-server": "^2.6.1",
+    "parcel": "^2.13.0",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "gsap": "^3.12.5",
+    "locomotive-scroll": "^4.1.4"
   }
 }
