--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "magma-vanilla",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html"
@@ -14,6 +13,7 @@
     "@types/locomotive-scroll": "^4.1.3",
     "lite-server": "^2.6.1",
     "parcel": "^2.13.0",
+    "svgo": "^3.3.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
