--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "compile": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,6 @@
     "@types/locomotive-scroll": "^4.1.3",
     "lite-server": "^2.6.1",
     "parcel": "^2.13.0",
-    "svgo": "^3.3.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
